--- a/1v1-lol/index.html
+++ b/1v1-lol/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1v1 Lol Unblocked | Play Online For Free</title>
-    <meta name="description" content="1v1 Lol Unblocked is the ultimate online builder-shooter. Practice your building, editing, and aiming skills against real players. Play 1v1, BR, or party modes.">
-    <meta name="keywords" content="1v1 lol, 1v1 lol unblocked, building game, shooter, multiplayer, online games, 1v1.lol, battle royale">
+    <meta name="description" content="Play 1v1 Lol Unblocked the fast-paced shooter and builder game. Compete online, build structures, and show your skills in 1v1.lol unblocked wtf matches.">
+    <meta name="keywords" content="1v1lol unblocked, 1v1 lol unblocked games, faf games, faf games unblocked, 1v1.lol unblocked wtf, play 1v1 lol online, unblocked shooting games>
     <link rel="canonical" href="https://onlyszgames.github.io/1v1-lol" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="1v1 Lol Unblocked | Play Online For Free" />
     <meta property="og:description" content="1v1 Lol Unblocked is the ultimate online builder-shooter. Practice your building, editing, and aiming skills against real players. Play 1v1, BR, or party modes." />
     <meta property="og:url" content="https://onlyszgames.github.io/1v1-lol" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/1v1-lol.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="1v1 Lol Unblocked | Play Online For Free">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -436,8 +436,8 @@ justify-content: center;}
      
 
         <div class="game-header" style="background-color: #90caf9;">
-            <h1>1v1 Lol</h1>
-            <p>Jump into 1v1 Lol Unblocked, the fast-paced third-person shooter and builder combo. This game is the perfect training ground for your battle royale skills. Challenge players online, build structures instantly, and prove your aiming prowess.</p>
+            <h1>⚔️ 1v1 Lol Unblocked Play Free Battle Game Online</h1>
+            <p>Get ready to build, shoot, and dominate in 1v1 Lol Unblocked, one of the most exciting third-person shooting games online. This action-packed title perfectly blends shooting mechanics with fast-paced building strategies, giving you the ultimate test of reflexes and creativity. Whether you’re training your battle royale skills or challenging other players in head-to-head matches, 1v1lol unblocked lets you jump straight into the action with no downloads, no limits, and no restrictions.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="1v1-lol">
@@ -469,7 +469,7 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://onlyszgames.github.io/img/1v1-lol.png" alt="1v1 Lol
 Gameplay" class="game-description-image" title="1v1 Lol">
-            <h2>⚔️ About 1v1 Lol</h2><p>1v1 Lol is a high-octane online game that combines third-person shooting with strategic, fast-paced building mechanics. Inspired by giants like Fortnite, this game strips the experience down to its core: tactical combat. You are pitted against another player in a 1v1 arena, or you can join other modes like a full Battle Royale. The unblocked version, 1v1 Lol Unblocked, is incredibly popular for quick, competitive matches directly in your browser. It is the best way to practice your editing, building, and shooting skills without any barriers.</p><h2>✨ Game Features 1v1 Lol</h2><p>The standout feature of 1v1 Lol is its intuitive and responsive building system. You can instantly create walls, floors, ramps, and roofs to gain a tactical advantage, block enemy fire, or reach high ground. The game offers several modes, including 1v1, 2v2, 8-player Battle Royale, and specific practice modes to hone your skills. There is a wide array of weapons, from shotguns for close-quarters combat to sniper rifles for long-range engagements. Playing 1v1 Lol Unblocked means you are always just one click away from the action.</p><h3>Key Strategies</h3><ul><li>Master '90s': Learn to build 90-degree turns quickly to gain height.</li><li>Edit Quickly: Practice editing your structures to create windows for shots.</li><li>Control High Ground: Always try to be above your opponent.</li><li>Weapon Switching: Swap between your shotgun and assault rifle effectively.</li></ul><h2>🕹️ How to Play 1v1 Lol</h2><p>Controlling your character in 1v1 Lol involves standard shooter controls (WASD for movement, mouse to aim/shoot, R to reload). The building keys are crucial: Z, X, C, and V are typically used to select and place structures. The 'F' key is used for editing. The main goal is to out-build and out-shoot your opponent. A common tactic is to build a ramp to get above your enemy, then switch to your shotgun for a precise shot. Do not just build; build with purpose. Use your structures for cover and to trap opponents. Practicing in 1v1 Lol Unblocked is the fastest way to become a pro.</p>
+            <h2>⚔️ About 1v1 Lol</h2><p>1v1 Lol is a unique online multiplayer experience that combines third-person shooting with real-time building mechanics. Inspired by popular games like Fortnite, this version simplifies the gameplay to focus purely on skill and strategy. You can battle other players in intense 1v1 duels, team up in 2v2 matches, or explore the Battle Royale mode with up to eight players. The unblocked version of 1v1 Lol allows you to play instantly in your browser even on restricted networks like school or work. That’s why it’s one of the most popular 1v1 lol unblocked games available today. Sites like faf games make it easy to access and enjoy faf games unblocked, ensuring smooth performance and zero interruptions.</p><h2>✨ Game Features of 1v1 Lol Unblocked</h2><p>1v1 Lol Unblocked stands out for its smooth controls, competitive gameplay, and advanced building mechanics that let you outsmart your opponents in real time. The game’s lightweight HTML5 design ensures seamless performance on Chromebooks, PCs, and even mobile browsers, making it perfect for quick sessions anywhere. Players can choose from multiple exciting modes including 1v1 Mode for pure skill-based combat, Battle Royale Mode where eight players fight to be the last one standing, 2v2 Mode to test teamwork and coordination, and Practice Mode for improving your aim, edits, and building speed without the pressure of competition. With a wide variety of weapons ranging from shotguns and rifles to precision snipers, every match feels fast, strategic, and full of action. Whether you’re looking to sharpen your reaction time or simply enjoy fast-paced shooting fun, 1v1lol unblocked delivers nonstop excitement for all players.</p><h3>🧠 Pro Strategies for Winning in 1v1 Lol</h3><ul><li>Master the “90s”: Quickly build 90-degree ramps to gain vertical advantage over opponents.</li><li>Fast Editing: Edit walls and floors efficiently to surprise enemies or take quick shots.</li><li>Stay Above: High ground control gives you the best visibility and accuracy.</li><li>Weapon Switching: Combine shotgun bursts with rapid rifle follow-ups for maximum damage.</li></ul><h2>🕹️ How to Play 1v1 Lol Unblocked</h2><p>Learning to play 1v1 Lol Unblocked is simple, but mastering it takes practice. Use the W, A, S, D keys to move, your mouse to aim and shoot, and press R to reload. Building is your main weapon: use Z, X, C, and V keys to create walls, ramps, and floors. The F key lets you edit structures, creating new openings or traps for your enemies. The goal is to eliminate your opponent by combining smart building with precise shooting. Try to build ramps for height, then use your shotgun to land critical hits. Each match in 1v1 Lol Unblocked lasts only a few minutes, making it perfect for quick sessions during school breaks or work pauses. This game runs directly in your browser through GitHub.io, ensuring smooth gameplay and no installation hassles. Thanks to platforms like faf games and faf games unblocked, you can enjoy it instantly anywhere, anytime.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -708,8 +708,8 @@ class="category-tag-item" style="background-color: #FF6D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite unblocked games? Play them all here instantly, right in your browser no downloads, no sign-ups, and fully accessible at school or work. Just click, play, and enjoy nonstop gaming fun anywhere, anytime.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -721,7 +721,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
