--- a/slope/index.html
+++ b/slope/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slope Unblocked | Master The Endless 3D Run</title>
-    <meta name="description" content="Slope Unblocked offers intense 3D endless running. Control your ball, avoid red obstacles, and race down the abstract track. How far can you roll in this skill game?">
-    <meta name="keywords" content="slope, slope unblocked, 3d ball game, endless runner, skill game, racing game, unblocked games, y8 slope">
+    <title>Slope Unblocked | Unblocked Games</title>
+    <meta name="description" content="Play Slope Unblocked the ultimate 3D endless runner where speed, reflex, and precision matter! Roll your ball down neon tracks, avoid red obstacles, and chase high scores in this addictive unblocked game on GitHub.io.">
+    <meta name="keywords" content="slope unblocked, slope unblocked games, slope unblocked game, slope unblocked gamez, github.io, unblocked games, play slope unblocked, slope 3D ball game, slope online, slope unblocked github">
     <link rel="canonical" href="https://onlyszgames.github.io/slope" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Slope Unblocked | Master The Endless 3D Run" />
     <meta property="og:description" content="Slope Unblocked offers intense 3D endless running. Control your ball, avoid red obstacles, and race down the abstract track. How far can you roll in this skill game?" />
     <meta property="og:url" content="https://onlyszgames.github.io/slope" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/slope.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Slope Unblocked | Master The Endless 3D Run">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -433,8 +433,8 @@ justify-content: center;}
     <div class="container">
         
         <div class="game-header" style="background-color: #D81B60;">
-            <h1>Slope</h1>
-            <p>Roll your ball down the intense neon track in Slope Unblocked. This fast-paced 3D runner tests your reflexes as you navigate an endless, procedurally generated city. Avoid red blocks and chase the high score in this addictive unblocked skill game.</p>
+            <h1>🌀 Slope – Play the Fastest Reflex Game Online</h1>
+            <p>challenges your reflexes as you navigate a never-ending, futuristic world filled with sharp turns, deadly red blocks, and gravity-defying slopes. Every second gets faster and more thrilling, testing your balance, timing, and precision. Whether you’re at school, work, or just relaxing at home, Slope Unblocked lets you play instantly no downloads or logins required. This browser-based classic runs perfectly on GitHub.io, giving you smooth performance and endless fun anywhere you go.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="slope">
@@ -467,7 +467,7 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://onlyszgames.github.io/img/slope.png" alt="Slope
 Gameplay" class="game-description-image" title="Slope">
-            <h2>🎢 About Slope</h2><p>Slope is the ultimate 3D endless runner that tests your speed and reflexes. You control a ball rolling down a steep, procedurally generated slope. The core challenge is to navigate this treacherous path, avoiding deadly red obstacles and flying off the edges while the speed constantly increases. Slope Unblocked is a favorite in schools and offices because of its simple controls and highly addictive, fast-paced gameplay. The neon-green graphics and futuristic city-scape create an immersive, abstract world.</p><h2>✨ Game Features Slope</h2><p>Slope stands out with its minimalist yet challenging design. The game is built on a realistic physics engine, making the ball's movement feel intuitive yet unpredictable. The endless, randomized track ensures that no two runs are ever the same, offering infinite replayability. A global leaderboard fuels the competitive spirit, pushing you to beat your own score and challenge players worldwide. Playing Slope Unblocked means you get instant access to this thrilling experience without any downloads.</p><h3>Core Mechanics</h3><ul><li>Fast-paced 3D running gameplay</li><li>Procedurally generated endless levels</li><li>Simple one-button (or two-button) controls</li><li>Competitive high-score leaderboard</li><li>Clean, abstract visual style</li></ul><h2>🕹️ How to Play Slope</h2><p>The objective in Slope is simple: survive as long as possible and get the highest score. You use the A/D keys or Left/Right arrow keys to steer the ball. The ball accelerates automatically, so your only job is to navigate. The primary tactic is to anticipate turns and obstacles. Make small, controlled movements; oversteering is the quickest way to hit a red wall or fall off the map. Try to stay near the center of the track to give yourself more time to react. Mastering the physics of Slope Unblocked is the key to achieving a record-breaking score.</p>
+            <h2>🎢 About Slope</h2><p>Slope Unblocked is a legendary unblocked game that has become one of the most popular online challenges worldwide. You control a glowing green ball rolling down a steep slope filled with twists, turns, and traps. The faster you go, the harder it gets and the more addictive it becomes. This slope unblocked game runs on advanced physics, making every movement feel real and responsive. The neon-green world and futuristic city backdrop keep players immersed while the difficulty steadily increases. It’s not just about reflexes it’s about mastering momentum and balance. Players love Slope Unblocked because it’s easy to start but nearly impossible to master. Its smooth performance, minimal graphics, and endless replay value make it one of the top choices among unblocked games on GitHub.io.</p><h2>✨ Game Features of Slope Unblocked</h2><p>The Slope Unblocked game 🎢 may look simple, but it’s packed with addictive mechanics that keep you coming back for more. Each run in Slope Unblocked ⚡ feels unique, thanks to its procedurally generated slopes no two tracks are ever the same. With just two keys 🎮, you can steer your ball smoothly through a futuristic neon city 🌆 while mastering realistic physics and gravity 🧠 that make every move feel dynamic. Compete on global leaderboards 🏆 and test your reflexes as the speed increases every second. Whether you call it Slope Unblocked games, Slope Unblocked game, or Slope Unblocked gamez, one thing’s for sure it’s one of the most thrilling unblocked games you can play right now, even on GitHub.io</p><h3>Core Mechanics</h3><ul><li>Fast-paced 3D endless running gameplay.</li><li>Procedurally generated, unpredictable levels.</li><li>Simple one-button or two-button control system.</li><li>Global leaderboards for competition.</li><li>Smooth frame rate optimized for GitHub.io.</li></ul><h2>🕹️ How to Play Slope Unblocked</h2><p>In Slope Unblocked, your mission is simple survive as long as possible and aim for the highest score 🏆. You’ll need lightning-fast reflexes ⚡ and steady control to master this thrilling Slope Unblocked game. Use the A/D or Left/Right arrow keys ⌨️ to steer your ball as it races down the neon track. The ball accelerates automatically, so your timing and precision are everything. Stay alert and avoid the deadly red obstacles 🚫 one wrong move can end your run instantly. Try to stay near the center of the slope for better reaction time and make smooth, controlled movements 🎮 to maintain balance at high speeds. Oversteering is the quickest way to lose control, so focus on rhythm and flow. Once you get used to the increasing pace, Slope Unblocked becomes a hypnotic challenge that rewards skill, patience, and focus. Whether you’re playing on GitHub.io or browsing other unblocked games, this Slope Unblocked gamez experience delivers nonstop action and excitement</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -701,8 +701,8 @@ class="category-tag-item" style="background-color: #AA00FF;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>🎮 Looking for your favorite unblocked games? Dive into the world of FAF Games, where every title is free, fast, and ready to play even at school or work! Just click, load, and start playing instantly no downloads, no limits, just nonstop fun.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -714,7 +714,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
