--- a/tunnel-rush/index.html
+++ b/tunnel-rush/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tunnel Rush Unblocked</title>
+    <title>FAF Games | Tunnel Rush Unblocked</title>
     <meta name="description" content="Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles.">
     <meta name="keywords" content="tunnel rush, tunnel rush unblocked, skill game, 3d game, avoidance game, racing game, fast-paced">
     <link rel="canonical" href="https://onlyszgames.github.io/tunnel-rush" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Tunnel Rush Unblocked" />
     <meta property="og:description" content="Tunnel Rush Unblocked is a high-speed 3D avoidance game. Race through a colorful, abstract tunnel. Rotate the world to dodge oncoming barriers and obstacles." />
     <meta property="og:url" content="https://onlyszgames.github.io/tunnel-rush" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/tunnel-rush.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Tunnel Rush Unblocked">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -434,8 +434,8 @@ justify-content: center;}
         
 
         <div class="game-header" style="background-color: #00897B;">
-            <h1>Tunnel Rush</h1>
-            <p>Get ready for a psychedelic, high-speed trip in Tunnel Rush Unblocked! You are flying through an endless 3D tunnel filled with colorful, moving obstacles. Use your reflexes to rotate the tunnel and dodge the red barriers. How long can you survive?</p>
+            <h1>Tunnel Rush Play the Fastest Reflex Game Online</h1>
+            <p>Get ready for a psychedelic, high-speed adventure in Tunnel Rush Unblocked 🎢! Fly through an endless 3D tunnel packed with colorful, moving obstacles. Use your reflexes to rotate the tunnel and dodge red barriers. How long can you survive? Whether you’re at school, work, or home, Tunnel Rush Unblocked games on GitHub.io let you play instantly with no downloads or VPNs required.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="tunnel-rush">
@@ -468,7 +468,7 @@ justify-content: center;}
         <div class="game-description">
             <img src="https://onlyszgames.github.io/img/tunnel-rush.png" alt="Tunnel Rush
 Gameplay" class="game-description-image" title="Tunnel Rush">
-            <h2>🌀 About Tunnel Rush</h2><p>Tunnel Rush is a lightning-fast, first-person 3D avoidance game. You are constantly moving forward at high speed through an abstract, procedurally generated tunnel. The tunnel is filled with spinning, sliding, and stationary barriers. Your only job is to avoid hitting them. The game is an intense test of reflexes, pattern recognition, and hand-eye coordination. Tunnel Rush Unblocked is beloved for its hypnotic, colorful visuals and its pure, adrenaline-pumping gameplay that demands your full concentration.</p><h2>✨ Game Features Tunnel Rush</h2><p>The core feature of Tunnel Rush is its speed. The game starts fast and only gets faster, increasing the challenge exponentially. The obstacles are varied, from simple stationary walls to complex, rotating barriers that require precise timing to slip through. The procedurally generated levels mean that every single run is a new, unique challenge. The bright, contrasting colors make the obstacles clear, but the sheer speed and visual effects can be hypnotic. Tunnel Rush Unblocked is a true skill-based "flow state" game.</p><h3>Survival Tactics</h3><ul><li>Look Ahead: Do not focus on the obstacle right in front of you. Look as far down the tunnel as possible.</li><li>Make Small Movements: You only need to move enough to clear the obstacle. Over-steering can put you in a bad position for the next barrier.</li><li>Stay Centered: Try to return to the center (or bottom) of the tunnel after each obstacle.</li><li>Breathe: It is easy to tense up. Stay relaxed to keep your reflexes sharp.</li></ul><h2>🕹️ How to Play Tunnel Rush</h2><p>The controls for Tunnel Rush are very simple. You use the A/D or Left/Right Arrow keys to rotate the tunnel (or move your viewpoint) left and right. You do not control your forward speed; it is automatic. As you hurtle through the tunnel, obstacles will appear. You must use the A and D keys to steer yourself through the safe gaps. If you hit any part of an obstacle, your run is over, and your score is recorded. The goal in Tunnel Rush Unblocked is to survive for as long as possible and achieve the highest distance score.</p>
+            <h2>🌀 About Tunnel Rush</h2><p>Tunnel Rush is an intense, first-person 3D avoidance game loved by fans of unblocked games worldwide. You constantly move forward at high speed through an abstract, procedurally generated tunnel filled with spinning, sliding, and stationary barriers. Your goal is simple: avoid hitting any obstacles while keeping your focus sharp. The game is a true test of reflexes, hand-eye coordination, and pattern recognition. Its hypnotic, neon visuals and fast-paced gameplay create a mesmerizing experience that keeps players coming back. Tunnel Rush Unblocked is perfect for quick gaming sessions, and playing it on Tunnel Rush GitHub ensures smooth performance on Chromebooks, PCs, and mobile devices.</p><h2>✨ Game Features of Tunnel Rush</h2><p>Tunnel Rush Unblocked may seem simple at first, but it’s packed with exciting mechanics that make it both addictive and challenging ⚡. The game starts fast and only accelerates, testing your reflexes to the maximum. Its vibrant neon visuals 🎨 and contrasting colors make obstacles easy to spot while creating a hypnotic, immersive experience. Each run takes you through procedurally generated tunnels 🧠, ensuring that no two attempts are ever the same and offering endless replay value. The game features precision obstacles 🎯, from stationary walls to rotating barriers, requiring perfect timing and skill to survive. Compete for the highest scores on global leaderboards 🏆 and see how you measure up against players worldwide. Whether you’re searching for Tunnel Rush Unblocked games, Tunnel Rush Unblocked, or Tunnel Rush GitHub, this thrilling unblocked game guarantees nonstop adrenaline-pumping fun.</p><h3>Survival Tactics for Tunnel Rush</h3><ul><li>Look Ahead: Focus on upcoming obstacles, not the ones immediately in front of you.</li><li>Small Movements: Only move as much as needed to clear obstacles; over-steering can cause collisions.</li><li>Stay Centered: Return to the center or bottom of the tunnel after each obstacle for better positioning.</li><li>Stay Relaxed: Tension slows reflexes. Keep calm to maintain sharp reactions.</li></ul><h2>🕹️ How to Play Tunnel Rush Unblocked</h2><p>Playing Tunnel Rush Unblocked is simple but demands focus and quick reflexes ⚡. Your goal is to survive as long as possible while dodging obstacles in the endless 3D tunnel. Use the A/D or Left/Right arrow keys ⌨️ to rotate the tunnel and steer your viewpoint left or right. Forward movement is automatic, so timing and precision are everything. Avoid hitting any red barriers 🚫 one collision ends your run instantly. Stay near the center of the tunnel for better reaction time and make small, controlled movements 🎮 to navigate tight spaces. Oversteering is the quickest way to fail, so glide with rhythm and flow. Mastering these mechanics in Tunnel Rush Unblocked games ensures maximum scores and endless excitement. Whether you’re playing on GitHub.io or exploring other unblocked games, this Tunnel Rush GitHub version delivers nonstop, high-speed fun 🏆.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -702,8 +702,8 @@ class="category-tag-item" style="background-color: #AA00FF;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantlyno downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -715,7 +715,7 @@ class="category-tag-item" style="background-color: #AA00FF;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
