--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -6,12 +6,12 @@
     <title>Odd Bot Out – Play Unblocked Games Online in Fullscreen Mode</title>
     <meta name="description" content="Play Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
     <meta name="keywords" content="odd bot out, odd bot out unblocked, unblocked games, play odd bot out online, puzzle unblocked games, robot puzzle game, odd bot out browser game, free unblocked games, logic games online, odd bot out full screen">
-    <link rel="canonical" href="https://onlyszgames.github.io/odd-bot-out/" />
+    <link rel="canonical" href="https://fafgamess.github.io/odd-bot-out/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
     <meta property="og:title" content="Odd Bot Out Unblocked ~» A Unique Puzzle Escape" />
     <meta property="og:description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms." />
-    <meta property="og:url" content="https://onlyszgames.github.io/odd-bot-out/" />
+    <meta property="og:url" content="https://fafgamess.github.io/odd-bot-out/" />
     <meta property="og:image" content="https://szgames.github.io/img/odd-bot-out.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
@@ -19,14 +19,14 @@
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Odd Bot Out Unblocked | OnlySzGames">
     <meta name="twitter:description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/odd-bot-out.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/odd-bot-out.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Odd Bot Out",
-        "url": "https://onlyszgames.github.io/odd-bot-out/",
+        "url": "https://fafgamess.github.io/odd-bot-out/",
         "description": "Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms.",
         "genre": "Puzzle",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/odd-bot-out.png"
+        "image": "https://fafgamess.github.io/img/odd-bot-out.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
