--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -6,12 +6,12 @@
     <title>Super Mario Bros – Play Unblocked Games Instantly in Your Browser</title>
     <meta name="description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
     <meta name="keywords" content="super mario bros, super mario bros unblocked, mario, nes mario, platformer, classic game, adventure game, kids game">
-    <link rel="canonical" href="https://onlyszgames.github.io/super-mario-bros/" />
+    <link rel="canonical" href="https://fafgamess.github.io/super-mario-bros/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
     <meta property="og:title" content="Super Mario Bros Unblocked ~» The NES Classic" />
     <meta property="og:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser." />
-    <meta property="og:url" content="https://onlyszgames.github.io/super-mario-bros/" />
+    <meta property="og:url" content="https://fafgamess.github.io/super-mario-bros/" />
     <meta property="og:image" content="https://szgames.github.io/img/super-mario-bros.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
@@ -26,7 +26,7 @@
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Super Mario Bros",
-        "url": "https://onlyszgames.github.io/super-mario-bros/",
+        "url": "https://fafgamess.github.io/super-mario-bros/",
         "description": "Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.",
         "genre": "Platformer",
         "applicationCategory": "Game",
