--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Super Mario Bros Unblocked ~» The NES Classic" />
     <meta property="og:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser." />
     <meta property="og:url" content="https://fafgamess.github.io/super-mario-bros/" />
-    <meta property="og:image" content="https://szgames.github.io/img/super-mario-bros.png" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/super-mario-bros.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@OnlySZGames">
     <meta name="twitter:title" content="Super Mario Bros Unblocked | OnlySzGames">
     <meta name="twitter:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
-    <meta name="twitter:image" content="https://szgames.github.io/img/super-mario-bros.png">
+    <meta name="twitter:image" content="img/super-mario-bros.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://szgames.github.io/img/super-mario-bros.png"
+        "image": "img/super-mario-bros.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -451,7 +451,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://szgames.github.io/img/super-mario-bros.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/super-mario-bros.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Super Mario Bros</div>
@@ -464,7 +464,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://szgames.github.io/img/super-mario-bros.png" alt="Super Mario Bros
+            <img src="https://fafgamess.github.io/img/super-mario-bros.png" alt="Super Mario Bros
 Gameplay" class="game-description-image" title="Super Mario Bros">
             <h2>🍄 About Super Mario Bros</h2><p>Super Mario Bros is arguably the most iconic video game of all time. This is the 1985 NES classic that defined the platformer genre. You play as Mario, a plumber who must run and jump through the magical Mushroom Kingdom to rescue Princess Peach from the evil turtle-king, Bowser. The game is a side-scrolling adventure spread across 8 worlds, each containing 4 levels. Super Mario Bros Unblocked lets you experience this piece of gaming history directly in your browser, with all the original music, enemies, and secrets intact.</p><h2>✨ Game Features Super Mario Bros</h2><p>Super Mario Bros introduced many of the most famous mechanics in gaming. The core feature is the 'power-up' system. Grabbing a Super Mushroom makes Mario bigger, allowing him to break bricks. Grabbing a Fire Flower lets him throw fireballs to defeat enemies. The 'Star' grants temporary invincibility. The game is also famous for its hidden secrets, like 'Warp Zones' hidden in pipes that let you skip worlds, and invisible '1-Up' blocks. Super Mario Bros Unblocked captures all of this timeless, pixel-perfect gameplay.</p><h3>Classic Mario Tips</h3><ul><li>Find the Warps: In world 1-2, you can get on top of the ceiling to find a warp zone.</li><li>Get 1-Ups: Stomping multiple enemies in a row without touching the ground builds a score multiplier that leads to extra lives.</li><li>Keep Your Power: If you are Fire Mario, try not to get hit. Fireballs are extremely useful.</li><li>World 4-1 Trick: There is a hidden 1-Up block right at the start, before the first pit.</li></ul><h2>🕹️ How to Play Super Mario Bros</h2><p>The controls for Super Mario Bros are simple. Use the A/D or Left/Right Arrow keys to move Mario. Press the 'Jump' button (often Z or Spacebar) to jump. The higher you hold the jump button, the higher Mario jumps. Press the 'Run/Fire' button (often X or Shift) to dash. Dashing lets you run faster and jump further. If you have the Fire Flower, this button also throws a fireball. Your goal is to reach the flagpole at the end of each level before the timer runs out. To defeat enemies, jump and land on top of them. Do not touch them from the side. Super Mario Bros Unblocked is a test of precise jumping and timing.</p>
             <div class="game-features">
@@ -527,7 +527,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/traffic-rush" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/traffic-rush.png" alt="Traffic Rush">
+                                <img src="https://fafgamess.github.io/img/traffic-rush.png" alt="Traffic Rush">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Traffic Rush</h3>
@@ -538,7 +538,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/zoom-be-2" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/zoom-be-2.png" alt="Zoom Be 2 More Zombie Puzzles">
+                                <img src="https://fafgamess.github.io/img/zoom-be-2.png" alt="Zoom Be 2 More Zombie Puzzles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Zoom Be 2 More Zombie Puzzles</h3>
@@ -549,7 +549,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/tag" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/tag.png" alt="Tag">
+                                <img src="https://fafgamess.github.io/img/tag.png" alt="Tag">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tag</h3>
@@ -560,7 +560,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/moto-x3m-winter" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/moto-x3m-winter.png" alt="Moto X3M Winter Snowy Ride">
+                                <img src="https://fafgamess.github.io/img/moto-x3m-winter.png" alt="Moto X3M Winter Snowy Ride">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Moto X3M Winter Snowy Ride</h3>
@@ -571,7 +571,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/running-fred" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/running-fred.png" alt="Running Fred Endless Runner">
+                                <img src="https://fafgamess.github.io/img/running-fred.png" alt="Running Fred Endless Runner">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Running Fred Endless Runner</h3>
@@ -582,7 +582,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/flappy-bird" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/flappy-bird.png" alt="Flappy Bird">
+                                <img src="https://fafgamess.github.io/img/flappy-bird.png" alt="Flappy Bird">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Flappy Bird</h3>
@@ -593,7 +593,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/panda-simulator-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/panda-simulator-3d.png" alt="Panda Simulator 3D Live The Panda Life">
+                                <img src="https://fafgamess.github.io/img/panda-simulator-3d.png" alt="Panda Simulator 3D Live The Panda Life">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Panda Simulator 3D Live The Panda Life</h3>
@@ -604,7 +604,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/paper-io-2" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/paper-io-2.png" alt="Paper Io 2 Multiplayer Conquest">
+                                <img src="https://fafgamess.github.io/img/paper-io-2.png" alt="Paper Io 2 Multiplayer Conquest">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Paper Io 2 Multiplayer Conquest</h3>
@@ -615,7 +615,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/hextris" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/hextris.png" alt="Hextris Fast Puzzle Action">
+                                <img src="https://fafgamess.github.io/img/hextris.png" alt="Hextris Fast Puzzle Action">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Hextris Fast Puzzle Action</h3>
@@ -626,7 +626,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/speed-stars" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/speed-stars.png" alt="Speed Stars">
+                                <img src="https://fafgamess.github.io/img/speed-stars.png" alt="Speed Stars">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Speed Stars</h3>
@@ -637,7 +637,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/sniper-gun-shooting" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/sniper-gun-shooting.png" alt="Sniper Gun Shooting">
+                                <img src="https://fafgamess.github.io/img/sniper-gun-shooting.png" alt="Sniper Gun Shooting">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Sniper Gun Shooting</h3>
@@ -648,7 +648,7 @@ class="category-tag-item" style="background-color: #00C853;">
                     <div class="game-card">
                         <a href="/bike-trials-winter-1" class="game-link">
          <div class="game-image">
-                                <img src="https://szgames.github.io/img/bike-trials-winter-1.png" alt="Bike Trials Winter 1 An Icy Physics Challenge">
+                                <img src="https://fafgamess.github.io/img/bike-trials-winter-1.png" alt="Bike Trials Winter 1 An Icy Physics Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bike Trials Winter 1 An Icy Physics Challenge</h3>
