--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@OnlySZGames">
-    <meta name="twitter:title" content="Super Mario Bros Unblocked | OnlySzGames">
+    <meta name="twitter:title" content="FAF Games | Play Unblocked Games">
     <meta name="twitter:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
     <meta name="twitter:image" content="img/super-mario-bros.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
