--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Mario Bros – Play Unblocked Games Instantly in Your Browser</title>
-    <meta name="description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
-    <meta name="keywords" content="super mario bros, super mario bros unblocked, mario, nes mario, platformer, classic game, adventure game, kids game">
+    <title>FAF Games – Play Unblocked Games Instantly in Your Browser</title>
+    <meta name="description" content="Play Super Mario Bros Unblocked Online and relive the classic adventure of Mario and Luigi! Enjoy this legendary platformer game for free no downloads, no limits, just pure fun right in your browser.">
+    <meta name="keywords" content="super mario bros unblocked, mario unblocked games, super mario bros online, play mario github, unblocked mario games, classic mario unblocked, mario bros unblocked online, mario browser game">
     <link rel="canonical" href="https://fafgamess.github.io/super-mario-bros/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
